--- a/csharp/CurrencyConverter/CurrencyConverter.Tests/CurrencyConverter.Tests.csproj
+++ b/csharp/CurrencyConverter/CurrencyConverter.Tests/CurrencyConverter.Tests.csproj
@@ -7,9 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="Shouldly" Version="4.1.0" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
     <PackageReference Include="SpecRun.SpecFlow" Version="3.9.7" />
-    <PackageReference Include="FluentAssertions" Version="6.2.0" />
   </ItemGroup>
 
 </Project>
